Correctly align new task and added task names and add color to icons

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,4 +45,14 @@
 
 .glyphicon-remove {
     margin-left: 3%;
+    color: red;
+}
+
+.glyphicon-ok {
+    color: green;
+}
+
+.icons {
+    display: inline-block;
+    width: 20%;
 }
